vertical align fix on the remove frame button

--- a/app/assets/stylesheets/partials/_frame.scss
+++ b/app/assets/stylesheets/partials/_frame.scss
@@ -302,10 +302,8 @@ $active-list-item: $shelby-blue;
 }
 
 .command-remove {
-  .icon {
-    display: inline-block;
-    height: 1em;
-    width: 1em;
+  .icon--cancel {
+    vertical-align: -0.1em;
   }
 }
 
@@ -501,7 +499,7 @@ $share-frame-half-gutter: 4px;
 .frame.fresh-play-new .sash {
   @include rotate(45deg);
   @include sash-primer();
-  
+
   position: absolute;
   right: -25px;
   top: 10px;
